--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
     "expo": "^52.0.6",
+    "expo-av": "^15.0.1",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
     "expo-linking": "~7.0.2",
@@ -25,11 +26,13 @@
     "expo-splash-screen": "~0.29.9",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.2",
+    "expo-video": "^2.0.1",
     "expo-web-browser": "~14.0.1",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.1",
+    "react-native-animatable": "^1.4.0",
     "react-native-appwrite": "^0.5.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
